2013-09-05 23:50 Yao Liu <xuanyao0111@gmail.com>
-Create this project
-Create app-1 named mapper, continue to finish it.
 import net package which is implement by our group.
 create a class named Mapper(need to finish)

2013-09-06 22:35 Yao Liu <xuanyao0111@gmail.com>
-Add functions in class Mapper
 Class mapper has not been finished

2013-09-06 23:40 Yao Liu <xunayao0111@gmail.com>
-Fix some error in CMakeLists.txt

2013-09-06 23:50 Yao Liu <xunyao0111@gmail.com>
-Create another project as server application

2013-09-07 11:00 Yao Liu <xuanyao0111@gmail.com>
-Add Class Controller. 
 A one-Server/Multiple-Clients structure has been finished.
 Next to design for K-Means and commands between server and clients. 

2013-09-07 22:25 Yao Liu <xuanyao0111@gmail.com>
-Modify the Class Controller
 Add functions, mutex among threads.
 Define status of main thread and client threads.
 Define the state transition. 
 The frame of this project(c/s system) seems to have been done.

2013-09-07 23:05 Yao Liu <xuanyao0111@gmail.com>
-Fix the error
 Some variables must be defined in global not local variables

2013-09-08 10:30 Yao Liu <xuanyao0111@gmail.com>
-Add some code in Class Controller
 Send commands and data to client in client threads.