@@ -33,3 +33,7 @@
 2013-09-08 10:30 Yao Liu <xuanyao0111@gmail.com>
 -Add some code in Class Controller
  Send commands and data to client in client threads.
+
+2013-09-08 22:20 Yao Liu <xuanyao0111@gmail.com>
+-Update codes. The state transition is OK!
+ Next add data transimit and parse.
